@@ -8,7 +8,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=. --avoid=xalloc-die --macro-prefix=gl --assume-autoconf=2.59 base64 c-ctype getopt getpass gettext gettimeofday hmac-md5 md5 nanosleep socklen sysexits xalloc xstrndup xvasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=. --avoid=xalloc-die --no-libtool --macro-prefix=gl base64 c-ctype getopt getpass gettext gettimeofday hmac-md5 md5 nanosleep socklen sysexits xalloc xstrndup xvasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies
 
@@ -17,10 +17,11 @@ noinst_LIBRARIES = libgnu.a
 libgnu_a_SOURCES =
 libgnu_a_LIBADD = @LIBOBJS@
 noinst_HEADERS =
+pkgdata_DATA =
 EXTRA_DIST =
 BUILT_SOURCES =
 SUFFIXES =
-MOSTLYCLEANFILES =
+MOSTLYCLEANFILES = core *.stackdump
 MOSTLYCLEANDIRS =
 CLEANFILES =
 DISTCLEANFILES =
@@ -231,7 +232,7 @@ libgnu_a_SOURCES += xvasprintf.h xvasprintf.c xasprintf.c
 ## end   gnulib module xvasprintf
 
 
-mostlyclean-local:
+mostlyclean-local: mostlyclean-generic
 	@test -z "$(MOSTLYCLEANDIRS)" || \
 	  for dir in $(MOSTLYCLEANDIRS); do \
 	    if test -d $$dir; then \
