@@ -15,7 +15,7 @@
 
 
 # Specification in the form of a command-line invocation:
-#   gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=. --avoid=xalloc-die --macro-prefix=gl --assume-autoconf=2.59 base64 c-ctype getopt getpass gettext gettimeofday hmac-md5 md5 nanosleep socklen sysexits xalloc xstrndup xvasprintf
+#   gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=. --avoid=xalloc-die --no-libtool --macro-prefix=gl base64 c-ctype getopt getpass gettext gettimeofday hmac-md5 md5 nanosleep socklen sysexits xalloc xstrndup xvasprintf
 
 # Specification in the form of a few gnulib-tool.m4 macro invocations:
 gl_MODULES([base64 c-ctype getopt getpass gettext gettimeofday hmac-md5 md5 nanosleep socklen sysexits xalloc xstrndup xvasprintf])
@@ -26,4 +26,3 @@ gl_DOC_BASE([doc])
 gl_TESTS_BASE([tests])
 gl_LIB([libgnu])
 gl_MACRO_PREFIX([gl])
-gl_AUTOCONF_MINVERSION([2.59])
